--- a/kiosk/index.html
+++ b/kiosk/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>.: Kiosk-Demo :.</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <!-- Styles: Note that main.css contains imports for the rest of the styling and will be concatinated via gulp sass -->
     <link rel="stylesheet" href="styles/main.min.css">
     <style>
