--- a/kiosk/index.html
+++ b/kiosk/index.html
@@ -105,7 +105,201 @@
 			
 		}
 		
-		#hero_pic { height:150px; }
+		#hero_pic { height:200px; }
+		
+		/* ----------- iPhone 4 and 4S ----------- */
+
+		/* Portrait and Landscape */
+		@media only screen 
+		  and (min-device-width: 320px) 
+		  and (max-device-width: 480px)
+		  and (-webkit-min-device-pixel-ratio: 2) {
+		
+		}
+		
+		/* Portrait */
+		@media only screen 
+		  and (min-device-width: 320px) 
+		  and (max-device-width: 480px)
+		  and (-webkit-min-device-pixel-ratio: 2)
+		  and (orientation: portrait) {
+		}
+		
+		/* Landscape */
+		@media only screen 
+		  and (min-device-width: 320px) 
+		  and (max-device-width: 480px)
+		  and (-webkit-min-device-pixel-ratio: 2)
+		  and (orientation: landscape) {
+		
+		}
+		
+		/* ----------- iPhone 5 and 5S ----------- */
+		
+		/* Portrait and Landscape */
+		@media only screen 
+		  and (min-device-width: 320px) 
+		  and (max-device-width: 568px)
+		  and (-webkit-min-device-pixel-ratio: 2) {
+		
+		}
+		
+		/* Portrait */
+		@media only screen 
+		  and (min-device-width: 320px) 
+		  and (max-device-width: 568px)
+		  and (-webkit-min-device-pixel-ratio: 2)
+		  and (orientation: portrait) {
+		}
+		
+		/* Landscape */
+		@media only screen 
+		  and (min-device-width: 320px) 
+		  and (max-device-width: 568px)
+		  and (-webkit-min-device-pixel-ratio: 2)
+		  and (orientation: landscape) {
+		
+		}
+		
+		/* ----------- iPhone 6 ----------- */
+		
+		/* Portrait and Landscape */
+		@media only screen 
+		  and (min-device-width: 375px) 
+		  and (max-device-width: 667px) 
+		  and (-webkit-min-device-pixel-ratio: 2) { 
+		
+		}
+		
+		/* Portrait */
+		@media only screen 
+		  and (min-device-width: 375px) 
+		  and (max-device-width: 667px) 
+		  and (-webkit-min-device-pixel-ratio: 2)
+		  and (orientation: portrait) { 
+		
+		}
+		
+		/* Landscape */
+		@media only screen 
+		  and (min-device-width: 375px) 
+		  and (max-device-width: 667px) 
+		  and (-webkit-min-device-pixel-ratio: 2)
+		  and (orientation: landscape) { 
+		
+		}
+		
+		/* ----------- iPhone 6+ ----------- */
+		
+		/* Portrait and Landscape */
+		@media only screen 
+		  and (min-device-width: 414px) 
+		  and (max-device-width: 736px) 
+		  and (-webkit-min-device-pixel-ratio: 3) { 
+		
+		}
+		
+		/* Portrait */
+		@media only screen 
+		  and (min-device-width: 414px) 
+		  and (max-device-width: 736px) 
+		  and (-webkit-min-device-pixel-ratio: 3)
+		  and (orientation: portrait) { 
+		
+		}
+		
+		/* Landscape */
+		@media only screen 
+		  and (min-device-width: 414px) 
+		  and (max-device-width: 736px) 
+		  and (-webkit-min-device-pixel-ratio: 3)
+		  and (orientation: landscape) { 
+		
+		}
+		
+		/* ----------- iPad mini ----------- */
+
+		/* Portrait and Landscape */
+		@media only screen 
+		  and (min-device-width: 768px) 
+		  and (max-device-width: 1024px) 
+		  and (-webkit-min-device-pixel-ratio: 1) {
+		
+		}
+		
+		/* Portrait */
+		@media only screen 
+		  and (min-device-width: 768px) 
+		  and (max-device-width: 1024px) 
+		  and (orientation: portrait) 
+		  and (-webkit-min-device-pixel-ratio: 1) {
+		
+		}
+		
+		/* Landscape */
+		@media only screen 
+		  and (min-device-width: 768px) 
+		  and (max-device-width: 1024px) 
+		  and (orientation: landscape) 
+		  and (-webkit-min-device-pixel-ratio: 1) {
+		
+		}
+		
+		/* ----------- iPad 1 and 2 ----------- */
+		/* Portrait and Landscape */
+		@media only screen 
+		  and (min-device-width: 768px) 
+		  and (max-device-width: 1024px) 
+		  and (-webkit-min-device-pixel-ratio: 1) {
+		
+		}
+		
+		/* Portrait */
+		@media only screen 
+		  and (min-device-width: 768px) 
+		  and (max-device-width: 1024px) 
+		  and (orientation: portrait) 
+		  and (-webkit-min-device-pixel-ratio: 1) {
+		
+		}
+		
+		/* Landscape */
+		@media only screen 
+		  and (min-device-width: 768px) 
+		  and (max-device-width: 1024px) 
+		  and (orientation: landscape) 
+		  and (-webkit-min-device-pixel-ratio: 1) {
+		
+		}
+		
+		/* ----------- iPad 3 and 4 ----------- */
+		/* Portrait and Landscape */
+		@media only screen 
+		  and (min-device-width: 768px) 
+		  and (max-device-width: 1024px) 
+		  and (-webkit-min-device-pixel-ratio: 2) {
+		
+		}
+		
+		/* Portrait */
+		@media only screen 
+		  and (min-device-width: 768px) 
+		  and (max-device-width: 1024px) 
+		  and (orientation: portrait) 
+		  and (-webkit-min-device-pixel-ratio: 2) {
+		
+		}
+		
+		/* Landscape */
+		@media only screen 
+		  and (min-device-width: 768px) 
+		  and (max-device-width: 1024px) 
+		  and (orientation: landscape) 
+		  and (-webkit-min-device-pixel-ratio: 2) {
+		
+		}
+		
+		
 		
     </style>
 </head>
@@ -114,7 +308,7 @@
         <!-- Swiper -->
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="images/hero_large.png" id="hero_pic"></div>
+                <div class="swiper-slide"><img src="images/menu.png" id="hero_pic"></div>
                 <div class="swiper-slide">Slide 2</div>
                 <div class="swiper-slide">Slide 3</div>
                 <div class="swiper-slide">Slide 4</div>
