--- a/kiosk/index.html
+++ b/kiosk/index.html
@@ -332,10 +332,10 @@
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                	<div >
+                	<div style="width:80%;margin:auto;text-align:center;">
                 	<h1>Introducing Kiosk</h1><br/>
                 	<img src="images/menu.png" id="hero_pic"><br>
-                    <p class="intro">Build beautiful kiosks with access to native features using standard web developer tools.</p> 
+                    <p class="intro">Build beautiful kiosks with access to native features<br> using standard web developer tools.</p> 
                     </div>
                 </div>
                 <div class="swiper-slide">Slide 2</div>
