--- a/src/index.html
+++ b/src/index.html
@@ -193,7 +193,7 @@
 		  and (min-device-width: 375px) 
 		  and (max-device-width: 667px) 
 		  and (-webkit-min-device-pixel-ratio: 2) { 
-		
+			#hero_pic { height:140px; }
 		}
 		
 		/* Portrait */
