--- a/src/index.html
+++ b/src/index.html
@@ -194,6 +194,7 @@
 		  and (max-device-width: 667px) 
 		  and (-webkit-min-device-pixel-ratio: 2) { 
 			#hero_pic { height:140px; }
+			.redback { background-color:#E70206; }
 		}
 		
 		/* Portrait */
@@ -250,6 +251,7 @@
 		  and (max-device-width: 1024px) 
 		  and (-webkit-min-device-pixel-ratio: 1) {
 			#hero_pic { height:180px; }
+			
 		}
 		
 		/* Portrait */
@@ -340,7 +342,7 @@
                     <p class="intro">Build beautiful kiosks with access to native features<br> using standard web developer tools.</p> 
                     </div>
                 </div>
-                <div class="swiper-slide">Slide 2</div>
+                <div class="swiper-slide redback">Slide 2</div>
                 <div class="swiper-slide">Slide 3</div>
                 <div class="swiper-slide">Slide 4</div>
             </div>
