--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
 		  font-size: 24px;
 		  line-height: 1.3542;
 		  font-weight: 200;
-		  width: 34em;
+		  width:auto;
 		  text-align: left;
 		  text-align: center;
 		  margin-left: auto;
@@ -192,9 +192,25 @@
 		@media only screen 
 		  and (min-device-width: 375px) 
 		  and (max-device-width: 667px) 
-		  and (-webkit-min-device-pixel-ratio: 2) { 
+		  and (-webkit-min-device-pixel-ratio: 2) {
+			   
 			#hero_pic { height:140px; }
-			.redback { background-color:#E70206; }
+			
+			h1 {
+			  font-size: 44px;
+			  line-height: .701;
+			  font-weight: 200;
+			}
+			
+			h1, h2, h3, h4, h5, h6 {
+		  		margin: 0 0 0.25em 0;
+			}
+			
+			p.intro {
+		  		font-size: 16px;
+		  		line-height: .894;
+		  		margin-bottom: 20px;
+			}
 		}
 		
 		/* Portrait */
