--- a/src/index.html
+++ b/src/index.html
@@ -211,6 +211,17 @@
 		  		line-height: .894;
 		  		margin-bottom: 20px;
 			}
+			
+			.swiper-container {
+				bottom:60px;
+			}
+			
+			.navigation-menu {
+			
+				height:60px;
+			
+			}
+			
 		}
 		
 		/* Portrait */
