--- a/kiosk/index.html
+++ b/kiosk/index.html
@@ -209,6 +209,17 @@
 		  		line-height: .894;
 		  		margin-bottom: 20px;
 			}
+			
+			.swiper-container {
+				bottom:60px;
+			}
+			
+			.navigation-menu {
+			
+				height:60px;
+			
+			}
+			
 		}
 		
 		/* Portrait */
