--- a/kiosk/index.html
+++ b/kiosk/index.html
@@ -128,6 +128,7 @@
 			
 		}
 		
+		.hero_image { max-height:330px; }
 		
 		
 		/* ----------- iPhone 4 and 4S ----------- */
@@ -192,11 +193,11 @@
 		  and (max-device-width: 667px) 
 		  and (-webkit-min-device-pixel-ratio: 2) {
 			   
-			#hero_pic { height:140px; }
+			.hero_image { max-height:140px; }
 			
 			h1 {
 			  font-size: 44px;
-			  line-height: .701;
+			  line-height: .900;
 			  font-weight: 200;
 			}
 			
@@ -275,7 +276,7 @@
 		  and (min-device-width: 768px) 
 		  and (max-device-width: 1024px) 
 		  and (-webkit-min-device-pixel-ratio: 1) {
-			#hero_pic { height:180px; }
+			.hero_image { max-height: 180px; }
 			
 		}
 		
@@ -363,8 +364,8 @@
                 <div class="swiper-slide">
                 	<div style="width:80%;margin:auto;text-align:center;">
                 	<h1>Introducing Kiosk</h1><br/>
-                	<img src="images/menu.png" id="hero_pic"><br>
-                    <p class="intro">Build beautiful kiosks with access to native features<br> using standard web developer tools.</p> 
+                	<img src="images/home_hero.png" id="hero_pic" class="hero_image"><br>
+                    <p class="intro">Build beautiful kiosks with access to native features using standard web developer tools.</p> 
                     </div>
                 </div>
                 <div class="swiper-slide redback">Slide 2</div>
