--- a/kiosk/index.html
+++ b/kiosk/index.html
@@ -408,7 +408,38 @@
                   </table>
                   </div>
                 </div>
-                <div class="swiper-slide">Slide 4</div>
+                <div class="swiper-slide">
+                	<div style="width:80%;margin:auto;">
+                	<h1>Compare</h1>
+                	<table>
+                        <thead>
+                          <tr>
+                              <th data-field="id">Feature</th>
+                              <th data-field="name">Kiosk</th>
+                              <th data-field="price">Kiosk Pro</th>
+                          </tr>
+                        </thead>
+                
+                        <tbody>
+                          <tr>
+                            <td>Alvin</td>
+                            <td>Eclair</td>
+                            <td>$0.87</td>
+                          </tr>
+                          <tr>
+                            <td>Alan</td>
+                            <td>Jellybean</td>
+                            <td>$3.76</td>
+                          </tr>
+                          <tr>
+                            <td>Jonathan</td>
+                            <td>Lollipop</td>
+                            <td>$7.00</td>
+                          </tr>
+                        </tbody>
+                  </table>
+                  </div>
+                </div>
             </div>
             <!-- Add Pagination -->
             <div class="swiper-pagination"></div>
