--- a/kiosk/index.html
+++ b/kiosk/index.html
@@ -139,6 +139,35 @@
 		  and (min-device-width: 320px) 
 		  and (max-device-width: 480px)
 		  and (-webkit-min-device-pixel-ratio: 2) {
+			  
+			  .hero_image { max-height:120px; }
+			
+			h1 {
+			  font-size: 34px;
+			  line-height: .700;
+			  font-weight: 200;
+			}
+			
+			h1, h2, h3, h4, h5, h6 {
+		  		margin: 0 0 0.15em 0;
+			}
+			
+			p.intro {
+		  		font-size: 14px;
+		  		line-height: .694;
+		  		margin-bottom: 10px;
+			}
+			
+			.swiper-container {
+				bottom:40px;
+			}
+			
+			.navigation-menu {
+			
+				height:40px;
+			
+			}
+			  
 		
 		}
 		
