--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,11 @@
     <!-- endbuild -->
     <style>
 		.demo { display:none; }
+		
+		* {
+			-webkit-touch-callout: none;
+			-webkit-user-select: none; 
+		}
 	
 		body:before, navigation-menu:before {
 		  content: "";
