--- a/kiosk/index.html
+++ b/kiosk/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="styles/main.min.css">
     <style>
 		.demo { display:none; }
+		
+		* {
+			-webkit-touch-callout: none;
+			-webkit-user-select: none; 
+		}
 	
 		body:before, navigation-menu:before {
 		  content: "";
